# time-travelling-persona

./: .gitignore  README.md  pyproject.toml
configs/ai_toolkit/: flux2_lora_train.yaml
configs/prompts/: time_travel_eras.md
data/: README.md
docs/: 00_overview.md  01_setup_thor.md  02_setup_x86.md  03_lora_training.md  04_workflow_hero_still.md  05_workflow_i2v.md  06_workflow_talking_head.md  07_verification.md
scripts/: prepare_dataset.py  verify_environment.py
workflows/comfyui/: README.md
